--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ Pygments==2.16.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3.post1
-pywin32==306
+#pywin32==306
 pyzmq==25.1.1
 redis==5.0.1
 referencing==0.30.2
